--- a/wallet/CMakeLists.txt
+++ b/wallet/CMakeLists.txt
@@ -1,4 +1,8 @@
+cmake_minimum_required(VERSION 3.5)
+
 set(TARGET_NAME beam-wallet${BEAM_TARGET_SUFFIX})
+
+find_package(Boost REQUIRED)
 
 add_definitions( -DSQLITE_HAS_CODEC )
 
@@ -18,8 +22,10 @@ set(WALLET_SRC
 )
 
 add_library(wallet STATIC ${WALLET_SRC})
-add_dependencies(wallet core p2p sqlite)
-target_link_libraries(wallet core p2p sqlite)
+target_link_libraries(wallet
+    PUBLIC Boost::boost
+    PRIVATE core p2p sqlite
+)
 
 add_executable(${TARGET_NAME} cli.cpp)
 
@@ -32,22 +38,19 @@ endif()
 configure_file("${PROJECT_SOURCE_DIR}/version.h.in" "${CMAKE_CURRENT_BINARY_DIR}/version.h")
 target_include_directories(${TARGET_NAME} PRIVATE ${CMAKE_CURRENT_BINARY_DIR})
 
-add_dependencies(${TARGET_NAME} wallet utility)
-target_link_libraries(${TARGET_NAME} wallet utility)
+target_link_libraries(${TARGET_NAME} PRIVATE wallet utility)
 
 add_library(wallet_api_proto STATIC api.cpp)
-add_dependencies(wallet_api_proto wallet utility http)
-target_link_libraries(wallet_api_proto wallet utility http)
+target_link_libraries(wallet_api_proto PRIVATE wallet utility http)
 
 set(WALLET_API_NAME wallet-api${BEAM_TARGET_SUFFIX})
 
 add_executable(${WALLET_API_NAME} api_cli.cpp)
 target_include_directories(${WALLET_API_NAME} PRIVATE ${CMAKE_CURRENT_BINARY_DIR})
-add_dependencies(${WALLET_API_NAME} wallet utility wallet_api_proto)
-target_link_libraries(${WALLET_API_NAME} wallet utility wallet_api_proto)
+target_link_libraries(${WALLET_API_NAME} PRIVATE wallet utility wallet_api_proto)
 
 if(LINUX)
-    target_link_libraries(${WALLET_API_NAME} -static-libstdc++ -static-libgcc)
+    target_link_libraries(${WALLET_API_NAME} PRIVATE -static-libstdc++ -static-libgcc)
 endif()
 
 add_subdirectory(unittests)
