--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,4 +1,4 @@
-cmake_minimum_required(VERSION 3.1)
+cmake_minimum_required(VERSION 3.5)
 
 set(VERSION_MAJOR 2)
 set(VERSION_MINOR 0)
@@ -97,7 +97,7 @@ enable_testing()
 
 function(add_test_snippet EXE_NAME LIB_NAME)
     add_executable(${EXE_NAME} ${EXE_NAME}.cpp)
-    add_dependencies(${EXE_NAME} ${LIB_NAME})
+    message(STATUS "test ${EXE_NAME} ${LIB_NAME}")
     target_link_libraries(${EXE_NAME} ${LIB_NAME})
     add_test(NAME ${EXE_NAME} COMMAND $<TARGET_FILE:${EXE_NAME}>)
 endfunction()
@@ -214,30 +214,30 @@ if(UNIX OR WIN32)
     add_definitions(-DUV_INTERNAL)
 endif()
 
-if(ANDROID)
-    message("ANDROID_ABI: ${ANDROID_ABI}")
-    add_definitions(-DBOOST_ERROR_CODE_HEADER_ONLY)
-    include_directories($ENV{BOOST_ROOT_ANDROID}/include)
-else()
-
-    find_package(Boost REQUIRED)
-
+#if(ANDROID)
+#    message("ANDROID_ABI: ${ANDROID_ABI}")
+#    add_definitions(-DBOOST_ERROR_CODE_HEADER_ONLY)
+#    include_directories($ENV{BOOST_ROOT_ANDROID}/include)
+#else()
+#
+#    find_package(Boost REQUIRED)
+#
     if(BEAM_USE_STATIC)
-        include(FindBoost)
+#        include(FindBoost)
         set(Boost_USE_MULTITHREADED ON)
         set(Boost_USE_STATIC_LIBS ON)
         set(Boost_USE_STATIC_RUNTIME ON)
-        else()
+    else()
         if (WIN32)
             add_definitions( -DBOOST_ALL_DYN_LINK )
         endif()
     endif()
-endif()
-
-if(LINUX)
-	add_definitions(-DBOOST_NO_CXX11_SCOPED_ENUMS)
-endif()
-
+#endif()
+#
+#if(LINUX)
+#	add_definitions(-DBOOST_NO_CXX11_SCOPED_ENUMS)
+#endif()
+#
 if (WIN32)
     add_definitions(-DNOMINMAX)
 endif()
@@ -247,70 +247,71 @@ add_definitions(-DPROJECT_SOURCE_DIR=\"${PROJECT_SOURCE_DIR}\")
 
 include_directories(${PROJECT_SOURCE_DIR}/3rdparty)
 
-if(BEAM_USE_STATIC)
-
-    if(MSVC)
-        include_directories($ENV{OPENSSL_ROOT_DIR}/include)
-    else()
-        find_package(OpenSSL REQUIRED)
-
-        if( OpenSSL_FOUND )
-            set(OPENSSL_USE_STATIC_LIBS TRUE)
-            link_directories(${OPENSSL_LIBRARIES})
-            include_directories(${OPENSSL_INCLUDE_DIR})
-            message(STATUS "Using OpenSSL ${OPENSSL_VERSION}")
-        else()
-            message(FATAL_ERROR "error, OpenSSL not found, please install: 'apt-get install libssl-dev' on Ubuntu")
-        endif()
-    endif()
-
-    # cmake can't find static lib on macos, harcoded
-    if(APPLE)
-        set(OPENSSL_LIBCRYPTO $ENV{OPENSSL_ROOT_DIR}/lib/libcrypto.a)
-        set(OPENSSL_LIBSSL $ENV{OPENSSL_ROOT_DIR}/lib/libssl.a)
-    elseif(UNIX)
-        set(OPENSSL_LIBCRYPTO /usr/lib/x86_64-linux-gnu/libcrypto.a)
-        set(OPENSSL_LIBSSL /usr/lib/x86_64-linux-gnu/libssl.a)
-    elseif(MSVC)
-        set(OPENSSL_LIBCRYPTO $ENV{OPENSSL_ROOT_DIR}/lib/VC/static/libcrypto64MT.lib crypt32.lib)
-        set(OPENSSL_LIBSSL $ENV{OPENSSL_ROOT_DIR}/lib/VC/static/libssl64MT.lib)
-
-        if(MSVC_VERSION GREATER_EQUAL 1900)
-            set(OPENSSL_LIBCRYPTO ${OPENSSL_LIBCRYPTO} legacy_stdio_definitions.lib)
-        endif()
-    endif()
-else()
-    if(ANDROID)
-        include_directories($ENV{OPENSSL_ROOT_DIR_ANDROID}/include)
-        set(OPENSSL_LIBCRYPTO $ENV{OPENSSL_ROOT_DIR_ANDROID}/libs/${ANDROID_ABI}/libcrypto.a)
-        set(OPENSSL_LIBSSL $ENV{OPENSSL_ROOT_DIR_ANDROID}/libs/${ANDROID_ABI}/libssl.a)
-    else()
-        find_package(OpenSSL REQUIRED)
-
-        if( OpenSSL_FOUND )
-            set(OPENSSL_USE_STATIC_LIBS TRUE)
-            link_directories(${OPENSSL_LIBRARIES})
-            include_directories(${OPENSSL_INCLUDE_DIR})
-            message(STATUS "Using OpenSSL ${OPENSSL_VERSION}")
-            set(OPENSSL_LIBCRYPTO OpenSSL::Crypto)
-            set(OPENSSL_LIBSSL OpenSSL::SSL)
-        else()
-            message(FATAL_ERROR "error, OpenSSL not found, please install: 'apt-get install libssl-dev' on Ubuntu")
-        endif()
-    endif()
-endif()
-
+#if(BEAM_USE_STATIC)
+#
+#    if(MSVC)
+#        include_directories($ENV{OPENSSL_ROOT_DIR}/include)
+#    else()
+#        find_package(OpenSSL REQUIRED)
+#
+#        if( OpenSSL_FOUND )
+             set(OPENSSL_USE_STATIC_LIBS TRUE)
+#            link_directories(${OPENSSL_LIBRARIES})
+#            include_directories(${OPENSSL_INCLUDE_DIR})
+#            message(STATUS "Using OpenSSL ${OPENSSL_VERSION}")
+#        else()
+#            message(FATAL_ERROR "error, OpenSSL not found, please install: 'apt-get install libssl-dev' on Ubuntu")
+#        endif()
+#    endif()
+#
+#    # cmake can't find static lib on macos, harcoded
+#    if(APPLE)
+#        set(OPENSSL_LIBCRYPTO $ENV{OPENSSL_ROOT_DIR}/lib/libcrypto.a)
+#        set(OPENSSL_LIBSSL $ENV{OPENSSL_ROOT_DIR}/lib/libssl.a)
+#    elseif(UNIX)
+#        set(OPENSSL_LIBCRYPTO /usr/lib/x86_64-linux-gnu/libcrypto.a)
+#        set(OPENSSL_LIBSSL /usr/lib/x86_64-linux-gnu/libssl.a)
+#    elseif(MSVC)
+#        set(OPENSSL_LIBCRYPTO $ENV{OPENSSL_ROOT_DIR}/lib/VC/static/libcrypto64MT.lib crypt32.lib)
+#        set(OPENSSL_LIBSSL $ENV{OPENSSL_ROOT_DIR}/lib/VC/static/libssl64MT.lib)
+#
+#        if(MSVC_VERSION GREATER_EQUAL 1900)
+#            set(OPENSSL_LIBCRYPTO ${OPENSSL_LIBCRYPTO} legacy_stdio_definitions.lib)
+#        endif()
+#    endif()
+#else()
+#    if(ANDROID)
+#        include_directories($ENV{OPENSSL_ROOT_DIR_ANDROID}/include)
+#        set(OPENSSL_LIBCRYPTO $ENV{OPENSSL_ROOT_DIR_ANDROID}/libs/${ANDROID_ABI}/libcrypto.a)
+#        set(OPENSSL_LIBSSL $ENV{OPENSSL_ROOT_DIR_ANDROID}/libs/${ANDROID_ABI}/libssl.a)
+#    else()
+#        find_package(OpenSSL REQUIRED)
+#
+#        if( OpenSSL_FOUND )
+#            set(OPENSSL_USE_STATIC_LIBS TRUE)
+#            link_directories(${OPENSSL_LIBRARIES})
+#            include_directories(${OPENSSL_INCLUDE_DIR})
+#            message(STATUS "Using OpenSSL ${OPENSSL_VERSION}")
+#            set(OPENSSL_LIBCRYPTO OpenSSL::Crypto)
+#            set(OPENSSL_LIBSSL OpenSSL::SSL)
+#        else()
+#            message(FATAL_ERROR "error, OpenSSL not found, please install: 'apt-get install libssl-dev' on Ubuntu")
+#        endif()
+#    endif()
+#endif()
+#
 if (UV_INTERNAL)
-    include_directories(${PROJECT_SOURCE_DIR}/3rdparty/libuv/include)
+  #  include_directories(${PROJECT_SOURCE_DIR}/3rdparty/libuv/include)
     add_subdirectory(3rdparty/libuv)
 endif()
 
-if(Boost_FOUND)
-    add_library(boost INTERFACE IMPORTED)
-    set_property(TARGET boost PROPERTY INTERFACE_INCLUDE_DIRECTORIES ${Boost_INCLUDE_DIR})
-endif()
+#if(Boost_FOUND)
+#    add_library(boost INTERFACE IMPORTED)
+#    set_property(TARGET boost PROPERTY INTERFACE_INCLUDE_DIRECTORIES ${Boost_INCLUDE_DIR})
+#endif()
 
 add_subdirectory(3rdparty/sqlite)
+add_subdirectory(3rdparty)
 add_subdirectory(utility)
 add_subdirectory(core)
 add_subdirectory(pow)
