--- a/mnemonic/CMakeLists.txt
+++ b/mnemonic/CMakeLists.txt
@@ -1,18 +1,23 @@
-set (TARGET_NAME "mnemonic")
+cmake_minimum_required(VERSION 3.5)
+
+set (TARGET_NAME mnemonic)
+
+find_package(Boost)
 
 set(MNEMONIC_SRC
     dictionary.cpp
     mnemonic.cpp
-
-    ${PROJECT_SOURCE_DIR}/3rdparty/hmac_sha512.c
-    ${PROJECT_SOURCE_DIR}/3rdparty/pkcs5_pbkdf2.c
-    ${PROJECT_SOURCE_DIR}/3rdparty/sha512.c
-    ${PROJECT_SOURCE_DIR}/3rdparty/zeroize.c
 )
 
 add_library(${TARGET_NAME} STATIC ${MNEMONIC_SRC})
 target_include_directories(${TARGET_NAME} PRIVATE ${PROJECT_SOURCE_DIR}}/external)
-add_dependencies(${TARGET_NAME} core)
-target_link_libraries(${TARGET_NAME} core )
+target_link_libraries(${TARGET_NAME}
+    PRIVATE 
+        core
+        Boost::boost
+        pbkdf
+
+
+)
 
 add_subdirectory(unittests)
