--- a/node/CMakeLists.txt
+++ b/node/CMakeLists.txt
@@ -1,3 +1,7 @@
+cmake_minimum_required(VERSION 3.5)
+
+find_package(Boost REQUIRED)
+
 set(NODE_SRC
     node.cpp
     db.cpp
@@ -12,7 +16,15 @@ if(ANDROID)
 endif()
 
 add_library(node STATIC ${NODE_SRC})
-add_dependencies(node sqlite core p2p pow)
-target_link_libraries(node sqlite core p2p pow)
+target_link_libraries(node 
+    PUBLIC
+        Boost::boost
+    PRIVATE 
+        core
+        sqlite 
+        p2p 
+        pow
+        pbkdf
+)
 
 add_subdirectory(unittests)
