--- a/pow/CMakeLists.txt
+++ b/pow/CMakeLists.txt
@@ -1,6 +1,9 @@
-set (CMAKE_MODULE_PATH "${CMAKE_CURRENT_SOURCE_DIR};${CMAKE_MODULE_PATH}")
+cmake_minimum_required(VERSION 3.5)
 
-include_directories(impl)
+#set (CMAKE_MODULE_PATH "${CMAKE_CURRENT_SOURCE_DIR};${CMAKE_MODULE_PATH}")
+
+find_package(Boost REQUIRED)
+find_package(OpenSSL REQUIRED)
 
 set(POW_SRC
     equihash.cpp
@@ -18,11 +21,8 @@ add_library(pow STATIC ${POW_SRC})
 
 target_compile_definitions(pow PRIVATE ENABLE_MINING)
 
-add_dependencies(pow crypto)
-target_link_libraries(pow crypto)
-if(Boost_FOUND)
-    target_link_libraries(pow boost)
-endif()
+target_link_libraries(pow PRIVATE crypto)
+target_link_libraries(pow PRIVATE Boost::boost)
 
 target_include_directories(pow PRIVATE ${PROJECT_SOURCE_DIR}/3rdparty/crypto)
 
@@ -32,11 +32,9 @@ add_library(external_pow STATIC
     stratum_server.cpp
 )
 
-add_dependencies(external_pow core p2p pow)
-target_link_libraries(external_pow p2p pow core)
+target_link_libraries(external_pow PRIVATE p2p pow core OpenSSL::SSL)
 
-add_executable(miner_client miner_client.cpp ../core/block_crypt.cpp) # ???????????????????????????
-add_dependencies(miner_client external_pow)
-target_link_libraries(miner_client external_pow)
+add_executable(miner_client miner_client.cpp)
+target_link_libraries(miner_client PRIVATE external_pow Boost::boost)
 
 add_subdirectory(unittests)
